--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:context=".Fragments.MainFragment">
 
         <LinearLayout
             android:id="@+id/fragmentMain_linearLayout_appBar"
@@ -59,7 +60,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/fragmentMain_recyclerView_programRecycler"
+            android:id="@+id/fragmentMain_recyclerView_lessonsRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
