--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -8,4 +8,8 @@
         android:id="@+id/mainFragment"
         android:name="com.saboon.timetable.Fragments.MainFragment"
         android:label="MainFragment" />
+    <fragment
+        android:id="@+id/detailsFragment"
+        android:name="com.saboon.timetable.Fragments.DetailsFragment"
+        android:label="DetailsFragment" />
 </navigation>
