--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,69 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".Fragments.MainFragment">
 
     <LinearLayout
+        android:id="@+id/fragmentMain_linearLayout_appBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".Fragments.MainFragment">
+        android:layout_height="50dp"
+        android:background="?attr/colorSecondaryVariant"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/fragmentMain_linearLayout_appBar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:background="?attr/colorSecondaryVariant">
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="10dp">
 
-            <LinearLayout
-                android:padding="10dp"
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/fragmentMain_textView_programName"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:drawableLeft="@drawable/ic_baseline_arrow_drop_down_24"
+                android:text="@string/textView_programName"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/fragmentMain_textView_programName"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/textView_programName"
-                    android:drawableLeft="@drawable/ic_baseline_arrow_drop_down_24"
-                    android:textSize="20sp"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:padding="10dp"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/fragmentMain_imageView_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_baseline_add_circle_outline_24"/>
-
-                <ImageView
-                    android:id="@+id/fragmentMain_imageView_settings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_baseline_settings_24"/>
-
-            </LinearLayout>
 
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/fragmentMain_recyclerView_lessonsRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
+            <ImageView
+                android:id="@+id/fragmentMain_imageView_add"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_baseline_add_circle_outline_24" />
+
+            <ImageView
+                android:id="@+id/fragmentMain_imageView_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/ic_baseline_settings_24" />
+
+        </LinearLayout>
 
     </LinearLayout>
-</layout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragmentMain_recyclerView_lessonsRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+</LinearLayout>
