--- a/app/src/main/res/layout/fragment_add_program.xml
+++ b/app/src/main/res/layout/fragment_add_program.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".Fragments.AddProgramFragment">
 
@@ -12,7 +13,7 @@
         android:id="@+id/fragmentAddProgram_linearLayout_appBar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="?attr/colorSecondaryVariant"
+        android:background="?attr/colorSecondary"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -26,8 +27,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+                android:drawableTint="?attr/colorOnPrimary"
+                android:textColor="?attr/colorOnPrimary"
                 android:text="@string/textView_appBar_addProg"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
 
         </LinearLayout>
@@ -44,6 +47,7 @@
                 android:id="@+id/fragmentMain_imageView_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                app:tint="?attr/colorOnPrimary"
                 android:src="@drawable/ic_baseline_edit_24" />
 
         </LinearLayout>
