--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -14,7 +14,7 @@
         android:id="@+id/fragmentDetails_linearLayout_appBar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="?attr/colorSecondaryVariant"
+        android:background="?attr/colorSecondary"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -27,9 +27,12 @@
                 android:id="@+id/fragmentDetails_textView_LessonDetails"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:textColor="?attr/colorOnPrimary"
                 android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+                android:drawableTint="?attr/colorOnPrimary"
                 android:text="@string/textView_appBar_details"
-                android:textSize="20sp" />
+                android:textSize="25sp"
+                android:textAlignment="textStart"/>
 
 
         </LinearLayout>
@@ -46,6 +49,7 @@
                 android:id="@+id/fragmentMain_imageView_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                app:tint="?attr/colorOnPrimary"
                 android:src="@drawable/ic_baseline_edit_24" />
 
         </LinearLayout>
@@ -63,6 +67,7 @@
             android:id="@+id/fragmentDetails_editText_lessonName"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:hint="@string/editText_lessonTextHint"
             app:endIconMode="clear_text"
@@ -80,6 +85,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:hint="@string/editText_lecturerTextHint"
             app:endIconMode="clear_text"
             app:startIconDrawable="@drawable/ic_baseline_person_24">
@@ -97,6 +103,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:hint="@string/editText_classRoomHint"
             app:endIconMode="clear_text"
             app:startIconDrawable="@drawable/ic_baseline_home_24">
@@ -151,6 +158,8 @@
         android:id="@+id/fragmentDetails_linearLayout_Buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:orientation="horizontal"
         android:visibility="visible">
 
@@ -163,7 +172,7 @@
             android:layout_weight="1"
             android:text="@string/button_cancel"
             android:textAllCaps="false"
-            android:textColor="?attr/colorOnPrimary"
+            android:textColor="?attr/colorSecondaryVariant"
             app:strokeColor="?attr/colorSecondaryVariant" />
 
         <Button
