--- a/app/src/main/res/layout/fragment_add_program.xml
+++ b/app/src/main/res/layout/fragment_add_program.xml
@@ -35,22 +35,22 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:orientation="horizontal"
-            android:padding="10dp">
+<!--        <LinearLayout-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:gravity="right"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:padding="10dp">-->
 
-            <ImageView
-                android:id="@+id/fragmentMain_imageView_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:tint="?attr/colorOnPrimary"
-                android:src="@drawable/ic_baseline_edit_24" />
+<!--            <ImageView-->
+<!--                android:id="@+id/fragmentMain_imageView_edit"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                app:tint="?attr/colorOnPrimary"-->
+<!--                android:src="@drawable/ic_baseline_edit_24" />-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
     </LinearLayout>
 
@@ -58,6 +58,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -131,13 +132,98 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-
-
-
-
         </LinearLayout>
 
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"
+            android:background="?attr/colorSecondaryVariant" />
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragmentAddProg_editText_reminderPicker"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/editText_dropDown_reminderText">
+
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView_reminderPicker"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="none" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="50dp"
+            android:textAlignment="textEnd"
+            android:textSize="12sp"
+            android:text="@string/textView_reminderInfoText"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"
+            android:background="?attr/colorSecondaryVariant" />
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragmentAddProg_editText_absenteeismimePicker"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="@string/editText_dropDown_absenteeismText">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editText_absenteeismPicker"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="numberDecimal" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+        <Button
+            android:id="@+id/fragmentAddProg_button_cancel"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:text="@string/button_cancel"
+            android:textAllCaps="false"
+            android:textColor="?attr/colorSecondaryVariant"
+            app:strokeColor="?attr/colorSecondaryVariant" />
+
+        <Button
+            android:id="@+id/fragmentAddProg_button_save"
+            android:layout_width="0dp"
+            style="?attr/materialButtonStyle"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:backgroundTint="?attr/colorSecondaryVariant"
+            android:text="@string/button_save"
+            android:textAllCaps="false" />
 
     </LinearLayout>
 
