--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -46,8 +46,16 @@
             android:padding="10dp">
 
             <ImageView
+                android:id="@+id/fragmentMain_imageView_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:tint="?attr/colorOnPrimary"
+                android:src="@drawable/ic_baseline_delete_24" />
+
+            <ImageView
                 android:id="@+id/fragmentMain_imageView_edit"
                 android:layout_width="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:layout_height="match_parent"
                 app:tint="?attr/colorOnPrimary"
                 android:src="@drawable/ic_baseline_edit_24" />
