--- a/app/src/main/res/layout/fragment_add_program.xml
+++ b/app/src/main/res/layout/fragment_add_program.xml
@@ -144,6 +144,29 @@
             android:background="?attr/colorSecondaryVariant" />
 
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fragmentAddProg_editText_typeLessonPicker"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/editText_dropDown_typeOfLesson">
+
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView_typeLesson"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="none" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"
+            android:background="?attr/colorSecondaryVariant" />
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/fragmentAddProg_editText_reminderPicker"
