--- a/app/src/main/res/layout/fragment_main_recycler_row_lessons.xml
+++ b/app/src/main/res/layout/fragment_main_recycler_row_lessons.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="horizontal"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -41,6 +43,7 @@
         android:layout_width="0dp"
         android:layout_weight="4"
         android:padding="10dp"
+        android:layout_marginRight="10dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
