--- a/app/src/main/res/layout/fragment_main_recycler_row_lessons.xml
+++ b/app/src/main/res/layout/fragment_main_recycler_row_lessons.xml
@@ -62,12 +62,12 @@
                 android:textStyle="bold"
                 android:text="@string/textView_LessonName"/>
             <TextView
-                android:id="@+id/fragmentMain_recycler_textView_classRoom"
+                android:id="@+id/fragmentMain_recycler_textView_type"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textAlignment="textEnd"
-                android:text="@string/textView_classRoom"/>
+                android:text="type of lesson"/>
 
 
         </LinearLayout>
@@ -84,12 +84,12 @@
                 android:layout_weight="1"
                 android:text="@string/textView_lecturerName"/>
             <TextView
-                android:id="@+id/fragmentMain_recycler_textView_absenteeism"
+                android:id="@+id/fragmentMain_recycler_textView_classRoom"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textAlignment="textEnd"
-                android:text="@string/textView_absenteeism"/>
+                android:text="@string/textView_classRoom"/>
 
 
         </LinearLayout>
