--- a/app/src/main/res/layout/fragment_add_program.xml
+++ b/app/src/main/res/layout/fragment_add_program.xml
@@ -36,22 +36,30 @@
 
         </LinearLayout>
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_weight="1"-->
-<!--            android:gravity="right"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:padding="10dp">-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/fragmentAddProg_imageView_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:tint="?attr/colorOnPrimary"
+                android:src="@drawable/ic_baseline_delete_24" />
 
 <!--            <ImageView-->
-<!--                android:id="@+id/fragmentMain_imageView_edit"-->
+<!--                android:id="@+id/fragmentAddProg_imageView_edit"-->
 <!--                android:layout_width="wrap_content"-->
+<!--                android:layout_marginLeft="20dp"-->
 <!--                android:layout_height="match_parent"-->
 <!--                app:tint="?attr/colorOnPrimary"-->
 <!--                android:src="@drawable/ic_baseline_edit_24" />-->
 
-<!--        </LinearLayout>-->
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -219,6 +227,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/fragmentAddProg_linearLayout_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
