--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_detailsFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
+        <argument android:name="selectedLessonID"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/addProgramFragment"
@@ -31,5 +34,9 @@
         <action
             android:id="@+id/action_addProgramFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
+        <argument
+            android:name="selectedTimeID"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 </navigation>
