--- a/app/src/main/res/layout/fragment_add_program.xml
+++ b/app/src/main/res/layout/fragment_add_program.xml
@@ -28,7 +28,7 @@
                 android:layout_height="match_parent"
                 android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                 android:drawableTint="?attr/colorOnPrimary"
-                android:textColor="?attr/colorOnPrimary"
+                android:textColor="?attr/colorOnSecondary"
                 android:contentDescription="@string/description_goBack"
                 android:text="@string/textView_appBar_addProg"
                 android:textSize="25sp" />
@@ -48,7 +48,7 @@
                 android:id="@+id/fragmentAddProg_imageView_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:tint="?attr/colorOnPrimary"
+                app:tint="?attr/colorOnSecondary"
                 android:src="@drawable/ic_baseline_delete_24" />
 
 <!--            <ImageView-->
