--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/fragmentDetails_textView_LessonDetails"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textColor="?attr/colorOnPrimary"
+                android:textColor="?attr/colorOnSecondary"
                 android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                 android:drawableTint="?attr/colorOnPrimary"
                 android:text="@string/textView_appBar_details"
@@ -49,7 +49,7 @@
                 android:id="@+id/fragmentDetails_imageView_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:tint="?attr/colorOnPrimary"
+                app:tint="?attr/colorOnSecondary"
                 android:src="@drawable/ic_baseline_delete_24" />
 
             <ImageView
@@ -57,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_height="match_parent"
-                app:tint="?attr/colorOnPrimary"
+                app:tint="?attr/colorOnSecondary"
                 android:src="@drawable/ic_baseline_edit_24" />
 
         </LinearLayout>
