--- a/app/src/main/res/layout/fragment_add_time.xml
+++ b/app/src/main/res/layout/fragment_add_time.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".Fragments.AddProgramFragment">
+    tools:context=".Fragments.AddTimeFragment">
 
 
     <LinearLayout
@@ -23,7 +23,7 @@
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/fragmentAddProgram_textView_AddProgram"
+                android:id="@+id/fragmentAddTime_textView_AddTime"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
