fixed main recycler crahses

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -102,8 +102,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fragmentDetails_editText_lecturerName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12sp" />
+                android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
