--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_main"
-    app:startDestination="@id/manageProgramFragment">
+    app:startDestination="@id/mainFragment">
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.saboon.timetable.Fragments.MainFragment"
@@ -14,9 +14,6 @@
         <action
             android:id="@+id/action_mainFragment_to_manageProgramFragment"
             app:destination="@id/manageProgramFragment" />
-        <argument
-            android:name="programID"
-            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
