--- a/app/src/main/res/layout/fragment_edit_program.xml
+++ b/app/src/main/res/layout/fragment_edit_program.xml
@@ -27,7 +27,7 @@
                 android:textColor="?attr/colorOnSecondary"
                 android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                 android:drawableTint="?attr/colorOnPrimary"
-                android:text="@string/TextView_appBar_addProg"
+                android:text="@string/textView_appBar_editProg"
                 android:textSize="25sp"
                 android:textAlignment="textStart"/>
 
@@ -41,6 +41,23 @@
             android:gravity="right"
             android:orientation="horizontal"
             android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/fragmentEditProg_imageView_save"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                app:tint="?attr/colorOnSecondary"
+                android:visibility="gone"
+                android:src="@drawable/ic_baseline_check_24" />
+
+            <ImageView
+                android:id="@+id/fragmentEditProg_imageView_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:tint="?attr/colorOnSecondary"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_baseline_edit_24" />
 
             <ImageView
                 android:id="@+id/fragmentEditProg_imageView_delete"
@@ -73,6 +90,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fragmentEditProg_editText_programName"
                 android:layout_width="match_parent"
+                android:inputType="none"
+                android:focusable="false"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
