--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -103,7 +103,7 @@
         android:id="@+id/main_emptyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/emptyText"
+        android:text="@string/addNewText"
         android:layout_marginTop="100dp"
         android:layout_gravity="center"/>
 
