fixed some problems

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -178,12 +178,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-<!--        <ProgressBar-->
-<!--            android:id="@+id/detailsLoadingProgressBar"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_marginTop="100dp"-->
-<!--            android:layout_width="50dp"-->
-<!--            android:layout_height="50dp"/>-->
+        <ProgressBar
+            android:id="@+id/detailsLoadingProgressBar"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
 
         <LinearLayout
             android:id="@+id/details_errorText"
